--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconncect" href="https://fonts.gstatic.com" crossorgin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
